cmake_minimum_required(VERSION 3.1.0)
project(SDXBasic CXX)

set(CMAKE_EXPORT_COMPILE_COMMANDS "ON")

set(INCLUDE_DIR "../../../include")
set(SOURCE_DIR "./")
set(OUTPUT_DIR "../../../bin")

include_directories(${INCLUDE_DIR})
file(GLOB SOURCE_LIST ${SOURCE_DIR}/*.cpp)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIR})

add_definitions(-D__STDC_CONSTANT_MACROS)
add_definitions(-D__STDC_LIMIT_MACROS)

if(USE_ONLY_CPP14_FEATURES)
	add_definitions(-DSDX_USE_ONLY_CPP14_FEATURES)
	set(CMAKE_CXX_STANDARD 14)
else(USE_ONLY_CPP14_FEATURES)
	set(CMAKE_CXX_STANDARD 17)
endif(USE_ONLY_CPP14_FEATURES)

if(USE_ONLY_MULTIBYTE_STRINGS)
	add_definitions(-DSDX_USE_ONLY_MULTIBYTE_STRINGS)
endif(USE_ONLY_MULTIBYTE_STRINGS)

if(COMPILE_INTO_DYNAMIC_LIBRARY)
	add_definitions(-DSDX_COMPILE_INTO_DYNAMIC_LIBRARY)
	add_library(${PROJECT_NAME} SHARED ${SOURCE_LIST})
else(COMPILE_INTO_DYNAMIC_LIBRARY)
	add_library(${PROJECT_NAME} STATIC ${SOURCE_LIST})
endif(COMPILE_INTO_DYNAMIC_LIBRARY)

file(GLOB HEADER_LIST_ROOT ${INCLUDE_DIR}/sdx/*.hpp)
file(GLOB HEADER_LIST_MACRO_UTILITY ${INCLUDE_DIR}/sdx/macro_utility/*.hpp)

install(FILES ${HEADER_LIST_ROOT} DESTINATION include/sdx)
install(FILES ${HEADER_LIST_MACRO_UTILITY} DESTINATION include/sdx/macro_utility)

install(TARGETS ${PROJECT_NAME} DESTINATION lib)